# ncnn_breakdown

./: .gitignore  LICENSE  README.md
lession/lession_1/examples/: CMakeLists.txt  squeezenet.cpp  tmp.proto
lession/lession_1/src/: CMakeLists.txt
lession/lession_2/src/: CMakeLists.txt
lesson/lesson_1/examples/: CMakeLists.txt  tmp.model
lesson/lesson_1/src/: datareader.h
lesson/lesson_10/: CMakeLists.txt
lesson/lesson_10/examples/: CMakeLists.txt  lession_10.cpp
lesson/lesson_10/src/: CMakeLists.txt  allocator.h  datareader.cpp  layer.cpp  layer.h  mat.h  mat_pixel.cpp  modelbin.cpp  modelbin.h  net.cpp  net.h  option.cpp  option.h  paramdict.cpp  paramdict.h
lesson/lesson_10/src/layer/: concat.cpp  concat.h  convolution.cpp  convolution.h  dropout.cpp  dropout.h  input.cpp  input.h  pooling.cpp  pooling.h  relu.cpp  relu.h  softmax.cpp  softmax.h  split.cpp  split.h
lesson/lesson_2/: CMakeLists.txt
lesson/lesson_2/examples/: CMakeLists.txt  lession_2.cpp
lesson/lesson_2/src/: blob.cpp  layer.h  net.cpp  net.h
lesson/lesson_3/: CMakeLists.txt
lesson/lesson_3/examples/: CMakeLists.txt  lession_3.cpp
lesson/lesson_3/src/: CMakeLists.txt  layer.cpp  paramdict.cpp  paramdict.h
lesson/lesson_4/: CMakeLists.txt
lesson/lesson_4/examples/: CMakeLists.txt
lesson/lesson_4/src/: blob.cpp  layer.cpp  layer.h  (+1 more)
lesson/lesson_5/: CMakeLists.txt
lesson/lesson_6/: CMakeLists.txt
lesson/lesson_7/: CMakeLists.txt
lesson/lesson_8/: CMakeLists.txt
lesson/lesson_9/: CMakeLists.txt  tags
lesson/lesson_9/examples/: CMakeLists.txt  lession_9.cpp
(+55 files in other folders)
